# bernstein

./: .coverage  .gitignore  .importlinter  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  README.md  SECURITY.md  _typos.toml  action.yml  bernstein.yaml  codecov.yml  coverage-test.xml  docker-compose.yaml  glama.json  mkdocs.yml  mutmut_config.py  pyproject.toml  server.json  sonar-project.properties  typos.toml  vulture_whitelist.py
.bernstein/: rules.yaml
.bernstein/workflows/: ci-pipeline.yaml
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  evolve-candidate.md  feature_request.yml  new_adapter.yml
.github/workflows/: ai-pr-review-gemini.yml  ai-pr-review.yml  auto-release.yml  bernstein-ci-fix.yml  bernstein-issues-decompose.yml  bernstein-pr-review.yml  bernstein-scheduled-maintenance.yml  ci.yml  cleanup-runs.yml  codeql.yml  copilot-setup-steps.yml  cross-platform.yml  delete-master.yml  dependabot-auto-merge.yml  dependency-security.yml  labeler.yml  license-compliance.yml  mutation-testing.yml  pentest.yml  pr-size.yml  protocol-compatibility-table.yml  publish-docker.yml  publish-extension.yml  publish-homebrew.yml  publish-packages.yml  publish.yml  pypi-yank.yml  release-drafter.yml  release-major-minor.yml  semgrep.yml  sonarcloud.yml  stale.yml  telegram-notify.yml
.plugin/: plugin.json
.sdd/: README.md  config.yaml  project.md
.sdd/agents/: catalog.json
.sdd/archive/: tasks.jsonl
.sdd/caching/: manifest.jsonl
.sdd/config/: providers.yaml  routing.yaml
.sdd/decisions/: 600-license-apache2.md  launch-plan.md
.sdd/knowledge/: architecture.md  file_index.json  recent_decisions.md
.sdd/marketing/: blog-tracker.md  growth-playbook.md  strategy.md  tracker.md  wave2_plan.md
.sdd/metrics/: api_usage_2026-04-02.jsonl  error_rate_2026-04-02.jsonl
.sdd/runtime/: .gitignore
.sdd/traces/: 04640a5028f9.jsonl  066eb18c5359.jsonl  0715280116f8.jsonl  07a7114366e9.jsonl  0908013d4b21.jsonl  09741d2278b3.jsonl  0a8ad260fa90.jsonl  0cc9365c5ff8.jsonl  0d373bdc529d.jsonl  10835ee452b4.jsonl  11afc46331f3.jsonl  1580014763d7.jsonl  15d83a329576.jsonl  16e2d84f94aa.jsonl  1907d34bcaea.jsonl  193d45ff7e1d.jsonl  1baa9fdb252a.jsonl  1e7733dc3265.jsonl  1e90d126da9b.jsonl  1fe1aaac85ca.jsonl  20a08fdac8d8.jsonl  21a09ebaa4c9.jsonl  2856d35e9496.jsonl  2e2176216934.jsonl  302a572bb527.jsonl  30d83d06253e.jsonl  323dc562e91f.jsonl  33f6015b11c1.jsonl  3426f2fd1e9e.jsonl  34fc9b92bc78.jsonl  38c20f7b0189.jsonl  39c2f958e216.jsonl  3b82a0314003.jsonl  3c3c18df7899.jsonl  3dd26de0d8ab.jsonl  3e91438ac772.jsonl  3f99c35e373e.jsonl  41d4a38d2083.jsonl  4277f33fa61d.jsonl  4901d29177f3.jsonl  (+293 more)
.well-known/: security.txt
action/: entrypoint.sh
benchmarks/: README.md  agent-hq-comparison.md  bench_orchestrator.py  bench_quality_gates.py  bench_startup.py  bench_task_store.py  crewai-langgraph-comparison.md  issues.json  run_benchmark.py
benchmarks/results/: benchmark_simulate_20260328_154744.json  benchmark_simulate_20260328_154744.md  benchmark_simulate_20260328_154810.json  benchmark_simulate_20260328_154810.md  benchmark_simulate_20260328_161111.json  benchmark_simulate_20260328_161111.md  benchmark_simulate_20260328_161842.json  benchmark_simulate_20260328_161842.md  benchmark_simulate_20260328_163535.json  benchmark_simulate_20260328_163535.md  benchmark_simulate_20260328_180718.json  benchmark_simulate_20260328_180718.md  benchmark_simulate_20260328_202922.json  benchmark_simulate_20260328_202922.md  benchmark_simulate_20260328_211640.json  benchmark_simulate_20260328_211640.md  benchmark_simulate_20260401_073802.json  benchmark_simulate_20260401_073802.md  issues_benchmark_20260328_211300.json  issues_benchmark_20260328_211300.md  issues_benchmark_20260401_073802.json  (+1 more)
community/: awesome-bernstein-plugins.md
docs/: 2026-04-12-deep-bug-hunt.md  ADAPTER_GUIDE.md  AGENTIC_MANIFESTO.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLUSTER.md  CONFIG.md  CONTRIBUTING.md  DEPENDENCY_RESOLVER.md  DEPLOYMENT.md  DESIGN.md  FEATURE_MATRIX.md  GETTING_STARTED.md  GLOSSARY.md  HELM_DEPLOYMENT.md  KNOWN_LIMITATIONS.md  LIFECYCLE.md  MODEL_POLICY.md  QUICKSTART_TUTORIAL.md  TROUBLESHOOTING.md  WHY_DETERMINISTIC.md  adapters.html  agents.txt  api-reference.html  api.html  blog.html  bug-bounty.md  cloudflare-adapters.md  cloudflare-ai.md  cloudflare-analytics.md  cloudflare-cli.md  cloudflare-setup.md  community-spotlight-april-2026.md  community-spotlight-template.md  compatibility.md  competitive-matrix.md  concepts.html  content-calendar.md  cost-optimization.md  (+38 more)
examples/: README.md  __init__.py  full.yaml  rag-system.yaml  simple.yaml
github-action/: README.md
hooks/: smart_approve.py
integrations/: __init__.py
plans/: strategic-300.yaml
scripts/: apply_dependency_fixes.py  build_packages.sh  check_coverage_thresholds.py  check_dependencies.py  ci_debug.sh  convert_tickets_to_v1.py  create_p0_issues.py  format_release_notes.py  gen_agents_md.py  gen_roadmap_r_series.py  gen_tickets_030426.py  gen_tickets_batch2.py  generate-spotlight.sh  generate_benchmark_docs.py  generate_compatibility_table.py  generate_openapi.py  generate_proto.sh  generate_roadmap_tickets.py  generate_sdk.py  health_monitor.sh  install.ps1  install.sh  researcher_sandbox.sh  run_tests.py  safe-push-main.sh  test_impact.py
sdk/python/: README.md  pyproject.toml
sdk/python/src/bernstein_sdk/: __init__.py  client.py  models.py  oauth.py  state_map.py
sdk/python/src/bernstein_sdk/adapters/: __init__.py  github_actions.py  jira.py  linear.py  slack.py  teams.py
sdk/python/tests/: test_client.py  test_jira.py  test_linear.py  test_models.py  test_oauth.py  test_state_map.py
templates/: bernstein.yaml  gitlab-ci.yml  plan.yaml  pvc.yaml  service.yaml  ticket.yaml
tests/: conftest.py  factories.py  test_evolution_e2e.py  test_server.py  test_worktree.py
(+4663 files in other folders)
