[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bernstein"
version = "1.4.14"
description = "Declarative agent orchestration for engineering teams"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Alex Chernysh", email = "alex@alexchernysh.com" }]
keywords = ["ai", "agents", "orchestration", "multi-agent", "coding", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "cryptography>=45.0.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "textual>=1.0",
    "click>=8.1",
    "openai>=2.29.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "setproctitle>=1.3",
    "prometheus-client>=0.21",
    "pluggy>=1.5",
    "mcp>=1.0",
    "watchdog>=4.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp>=1.30.0",
    "pillow>=12.1.1",
    "pyfiglet>=1.0",
    "terminaltexteffects>=0.11",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pyright"]
ml = ["scikit-learn>=1.5"]
graphics = []  # term-image disabled: caps pillow<11, conflicts with CVE-2026-25990 fix

[project.scripts]
bernstein = "bernstein.cli.main:cli"
bernstein-worker = "bernstein.core.worker:main"

[project.entry-points."bernstein.plugins"]
# Lifecycle/event plugins (hookimpl classes). Example:
# my_plugin = "my_package:MyPlugin"

[project.entry-points."bernstein.adapters"]
# Third-party CLI agent adapters (CLIAdapter subclasses). Example:
# myagent = "my_package.adapter:MyAgentAdapter"
# Then use: bernstein run --cli myagent plan.yaml

[project.entry-points."bernstein.gates"]
# Custom quality gates (GatePlugin subclasses). Example:
# my_gate = "my_package.gates:MyGate"

[project.entry-points."bernstein.triggers"]
# Custom trigger sources (normalize external events into tasks). Example:
# jira = "my_package.triggers:JiraTriggerSource"

[project.entry-points."bernstein.reporters"]
# Custom reporters (hookimpl classes that emit run summaries). Example:
# slack = "my_package.reporters:SlackReporter"

[tool.hatch.build]
exclude = [
    ".sdd/",
    "tests/",
    "scripts/",
    "docs/",
    ".github/",
]

[tool.hatch.build.targets.wheel.force-include]
"templates/prompts" = "bernstein/_default_templates/prompts"
"templates/bernstein.yaml" = "bernstein/_default_templates/bernstein.yaml"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.ruff.lint.per-file-ignores]
# HTML/CSS template strings that cannot be wrapped without breaking structure
"src/bernstein/evolution/report.py" = ["E501"]
# Agent-generated modules with long inline strings and class-level lists
"src/bernstein/adapters/mock.py" = ["E501"]
"src/bernstein/compliance/eu_ai_act.py" = ["E501", "RUF012"]
"src/bernstein/core/differential_privacy.py" = ["RUF002"]
"src/bernstein/core/license_scanner.py" = ["E501"]
"src/bernstein/core/memory_integrity.py" = ["E501", "RUF003"]
"src/bernstein/core/server_supervisor.py" = ["TC003"]
"src/bernstein/core/runtime_state.py" = ["TC003"]
"src/bernstein/cli/frame_buffer.py" = ["TC003", "RUF002"]
"src/bernstein/cli/gradients.py" = ["TC003", "RUF002", "RUF003"]
"src/bernstein/cli/image_renderer.py" = ["TC003"]
"benchmarks/run_benchmark.py" = ["E501", "RUF002"]
"scripts/generate_roadmap_tickets.py" = ["E501", "RUF001"]
"sdk/python/src/bernstein_sdk/adapters/github_actions.py" = ["E501"]
"sdk/python/src/bernstein_sdk/adapters/jira.py" = ["E501"]
"tests/**/*.py" = ["E402", "E501", "E741", "RUF002", "RUF003", "RUF012", "RUF043", "SIM108", "SIM117", "TC002", "TC003", "TC006"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]
# Agent-created modules pending type annotation cleanup.
# TODO: remove excludes as each module is cleaned up (#345h hygiene tickets)
exclude = [
    "src/bernstein/core/trigger_manager.py",
    "src/bernstein/core/trigger_sources/",
    "src/bernstein/core/evolve_mode.py",
    "src/bernstein/core/circuit_breaker.py",
    "src/bernstein/core/task_store.py",
    "src/bernstein/core/store_postgres.py",
    "src/bernstein/core/server_launch.py",
    "src/bernstein/core/semantic_graph.py",
    "src/bernstein/core/repo_index.py",
    "src/bernstein/core/cascade_router.py",
    "src/bernstein/core/graduation.py",
    "src/bernstein/core/auth.py",
    "src/bernstein/core/plan_approval.py",
    "src/bernstein/core/planner.py",
    "src/bernstein/core/task_completion.py",
    "src/bernstein/core/knowledge_base.py",
    "src/bernstein/core/api_usage.py",
    "src/bernstein/core/routes/auth.py",
    "src/bernstein/core/routes/graduation.py",
    "src/bernstein/core/routes/slack.py",
    "src/bernstein/cli/checkpoint_cmd.py",
    "src/bernstein/evolution/cycle_helpers.py",
    "src/bernstein/evolution/report_generator.py",
    "src/bernstein/core/batch_router.py",
    "src/bernstein/core/bootstrap.py",
    "src/bernstein/core/bulletin.py",
    "src/bernstein/core/git_ops.py",
    "src/bernstein/core/manager_parsing.py",
    "src/bernstein/core/manager.py",
    "src/bernstein/core/models.py",
    "src/bernstein/core/routes/tasks.py",
    "src/bernstein/core/routes/webhooks.py",
    "src/bernstein/core/spawn_prompt.py",
    "src/bernstein/core/spawner.py",
    "src/bernstein/core/store.py",
    "src/bernstein/compliance/",
    "src/bernstein/benchmark/",
    "src/bernstein/cli/audit_cmd.py",
    "src/bernstein/cli/chaos_cmd.py",
    "src/bernstein/cli/dashboard.py",
    "src/bernstein/cli/gateway_cmd.py",
    "src/bernstein/core/audit.py",
    "src/bernstein/core/ci_monitor.py",
    "src/bernstein/core/container.py",
    "src/bernstein/core/duration_predictor.py",
    "src/bernstein/core/incident.py",
    "src/bernstein/core/manifest.py",
    "src/bernstein/core/mcp_gateway.py",
    "src/bernstein/core/memory_integrity.py",
    "src/bernstein/core/merkle.py",
    "src/bernstein/core/orchestrator.py",
    "src/bernstein/core/router.py",
    "src/bernstein/core/routes/acp.py",
    "src/bernstein/core/routes/status.py",
    "src/bernstein/core/runbooks.py",
    "src/bernstein/core/slo.py",
    "src/bernstein/core/voting.py",
    "src/bernstein/core/workflow.py",
    "src/bernstein/core/workflow_dsl.py",
    "src/bernstein/cli/self_update_cmd.py",
    "src/bernstein/tui/widgets.py",
    "src/bernstein/cli/diff_cmd.py",
    "src/bernstein/cli/voice_cmd.py",
    "src/bernstein/cli/worker_cmd.py",
    "src/bernstein/core/formal_verification.py",
    "src/bernstein/core/seed.py",
    "src/bernstein/cli/compare_screen.py",
    "src/bernstein/cli/merge_cmd.py",
    "src/bernstein/cli/prompts_cmd.py",
    "src/bernstein/cli/status_cmd.py",
    "src/bernstein/core/adaptive_parallelism.py",
    "src/bernstein/core/cascade.py",
    "src/bernstein/core/prompt_versioning.py",
    "src/bernstein/core/secrets.py",
    "src/bernstein/core/agent_lifecycle.py",
    "src/bernstein/core/backlog_parser.py",
    "src/bernstein/core/plan_loader.py",
    "src/bernstein/core/runtime_state.py",
    "src/bernstein/cli/maintenance_cmd.py",
    "src/bernstein/cli/image_renderer.py",
    "src/bernstein/core/agent_identity.py",
    "src/bernstein/core/command_policy.py",
    "src/bernstein/core/key_rotation.py",
    "src/bernstein/core/mcp_server.py",
    "src/bernstein/core/quality_gates.py",
    "src/bernstein/core/server.py",
    "src/bernstein/adapters/conformance.py",
    "src/bernstein/core/token_waste_report.py",
    "src/bernstein/core/workflow_importer.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["bernstein"]

[tool.coverage.paths]
source = [
    "src/bernstein",
    "*/site-packages/bernstein",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.3.1",
    "respx>=0.22",
    "ruff>=0.9",
    "pyright>=1.1",
    "scikit-learn>=1.5",
]
