[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bernstein-sdk"
version = "0.1.0"
description = "Integration SDK for Bernstein — connect CI/CD, issue trackers, and chat tools"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
jira = ["requests>=2.31"]
linear = []
slack = []
teams = []
all = ["bernstein-sdk[jira,linear,slack,teams]"]
dev = ["pytest>=9.0.3", "pytest-asyncio>=0.23", "respx>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["src/bernstein_sdk"]

[tool.pyright]
include = ["src"]
strict = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
